# SymmetricGroupExplorer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SYMUI_data_types.h  SYMUI_error_presentation.cpp  SYMUI_error_presentation.h  SYMUI_input_processing.cpp  SYMUI_input_processing.h  SYMUI_windows.cpp  SYMUI_windows.h  SYM_errors.cpp  SYM_errors.h  SYM_symmetric_group.cpp  SYM_symmetric_group.h  SymUI_data_types.hpp  SymUI_error_presentation.cpp  SymUI_error_presentation.h  SymUI_input_processing.cpp  SymUI_input_processing.hpp  SymUI_windows.cpp  SymUI_windows.hpp  Sym_cycle_notation_parser.cpp  Sym_cycle_notation_parser.hpp  Sym_data_types.h  Sym_data_types.hpp  Sym_errors.cpp  Sym_input_processing.cpp  Sym_input_processing.hpp  Sym_symmetric_group.cpp  Sym_symmetric_group.h  Sym_symmetric_group.hpp  SymmetricGroupExplorer_main.cpp  conanfile.py  cycle_notation.l  cycle_notation_lexer.l  cycle_notation_parser.y  cycle_notation_scanner.l  error_types.h  (+1 more)
